--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -8,6 +8,7 @@
         android:id="@+id/nameTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:padding="8dp"/>
 
 </LinearLayout>
